# AoC2024

./: .ycm_extra_conf.py  CMakeLists.txt  day1-input.txt.output  helpers.cpp  helpers.h  main.cpp  prog  readme.md  split_custom_delimiter.cpp  utilsCmdLine.cpp
day1/: day1.cpp
day2/: day2-input.txt.out  day2.cpp  prog
day3/: day3.cpp
day4/: day4.cpp
utils/: helpers.cpp  helpers.h
